--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit==1.33.0
 streamlit-audiorecorder==0.0.5
-groq==0.5.0
-gradio==4.29.0
+groq==0.13.0
+httpx
+gradio==5.7.1
 python-dotenv==1.0.1
-transformers[torch]
